--- a/index1.html
+++ b/index1.html
@@ -31,12 +31,12 @@
 </head>
 
 <body>
-/*Origional Code Written by Cory Fogliani (Email: cory@ijustdontcare.com)
+<!--/*Origional Code Written by Cory Fogliani (Email: cory@ijustdontcare.com)
 Testers: Cory Fogliani, Chris Gordon
 Featured on JavaScript Kit (http://javascriptkit.com) */
 
 
-/*Modified Chrystal Bost*/
+/*Modified Chrystal Bost*/-->
 
 
 <script type="text/javascript" src="phonegap.js"></script>
